--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/QRCode測試.loader.js";
+      var loaderUrl = buildUrl + "/QRTEST.loader.js";
       var config = {
-        dataUrl: buildUrl + "/QRCode測試.data.gz",
-        frameworkUrl: buildUrl + "/QRCode測試.framework.js.gz",
-        codeUrl: buildUrl + "/QRCode測試.wasm.gz",
+        dataUrl: buildUrl + "/QRTEST.data.unityweb",
+        frameworkUrl: buildUrl + "/QRTEST.framework.js.unityweb",
+        codeUrl: buildUrl + "/QRTEST.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "QRTEST",
